--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -9,72 +9,26 @@ on:
         description: the tag to release for
         default: ""
 jobs:
-  compile:
-    runs-on: ubuntu-latest
+  release_bin:
+    runs-on: ${{matrix.os}}
+    strategy:
+      matrix:
+        os:
+          - ubuntu-24.04
+          - ubuntu-24.04-arm
     steps:
       - uses: actions/checkout@v4
       - run: make compile
-      - uses: actions/upload-artifact@v4
-        with:
-          name: bin
-          path: bin/
-  # release_deb:
-  #   runs-on: ubuntu-latest
-  #   needs: compile
-  #   steps:
-  #     - uses: actions/download-artifact@v4
-  #       with:
-  #         name: bin
-  #         path: ${{github.workspace}}/bin
-  #     - if: ${{!env.ACT}}
-  #       uses: softprops/action-gh-release@v2
-  #       with:
-  #         tag_name: ${{github.event.release.tag_name || github.event.inputs.release_tag}}
-  #         files: bin/coinflip
-  #         fail_on_unmatched_files: true
-  #       env:
-  #         GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-  #     - if: ${{env.ACT}}
-  #       uses: actions/upload-artifact@v4
-  #       with:
-  #         path: bin/coinflip
-  # release_aur-bin:
-  #   runs-on: ubuntu-latest
-  #   needs: compile
-  #   steps:
-  #     - uses: actions/download-artifact@v4
-  #       with:
-  #         name: bin
-  #         path: ${{github.workspace}}/bin
-  #     - if: ${{!env.ACT}}
-  #       uses: softprops/action-gh-release@v2
-  #       with:
-  #         tag_name: ${{github.event.release.tag_name || github.event.inputs.release_tag}}
-  #         files: bin/coinflip
-  #         fail_on_unmatched_files: true
-  #       env:
-  #         GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-  #     - if: ${{env.ACT}}
-  #       uses: actions/upload-artifact@v4
-  #       with:
-  #         path: bin/coinflip
-  release_bin:
-    runs-on: ubuntu-latest
-    needs: compile
-    steps:
-      - if: ${{!env.ACT}}
-        uses: actions/download-artifact@v4
-        with:
-          name: bin
-          path: ${{github.workspace}}/bin
+      - run: echo "FNAME=coinflip-$(uname -s)-$(uname -m)" >>"$GITHUB_ENV"
+      - run: mv bin/coinflip "$FNAME"
       - uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{github.event.release.tag_name || github.event.inputs.release_tag}}
-          files: bin/coinflip
+          files: ${{env.FNAME}}
           fail_on_unmatched_files: true
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
       - if: ${{env.ACT}}
         uses: actions/upload-artifact@v4
         with:
-          path: bin/coinflip
+          path: ${{env.FNAME}}
